weather-desktop (0.2.3); urgency=low

 * Fixed #29 - Added mini menu and empty configuration dialog

-- Michael Spencer <spencers1993@gmail.com>  Mon, 27 May 2013 17:23:07 -0500


weather-desktop (0.2.2); urgency=low

 * Fixed #30 - Access times are now stored in UTC

-- Michael Spencer <spencers1993@gmail.com>  Sat, 25 May 2013 21:02:08 -0500


weather-desktop (0.2.1); urgency=low

 * Added support for forecasts
 * Added code to create daily forecasts for Forecast.io
 * Added daily forecast UI

-- Michael Spencer <spencers1993@gmail.com>  Sat, 25 May 2013 20:39:59 -0500


weather-desktop (0.2); urgency=medium

 * Refactored weather code
 * Better usage limits
 * Added new backend for Forecast.io
 * Added Metric & English Units
 * New location UI
 * Fixed some minor bugs.

-- Michael Spencer <spencers1993@gmail.com>  Fri, 24 May 2013 18:29:24 -0500


weather-desktop (0.1); urgency=low

 * Initial version

-- Michael Spencer <spencers1993@gmail.com>  Tue, 14 May 2013 19:47:37 -0500